--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "title": "Lorem ipsum dolor sit.",
+        "title": "Project 1",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae quo non tempora neque ullam eligendi dolorem reprehenderit, fugit quod voluptatum sapiente voluptatem harum numquam necessitatibus dolores explicabo deleniti consequuntur laboriosam."
     },
